--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.4",
     "autoprefixer": "^10.4.19",
     "gulp": "^5.0.0",
     "gulp-group-css-media-queries": "^1.2.2",
