--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "start": "vite --open --mode ssr",
+    "start": "vite --host --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
